--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 <body>
   <div class="iphone">
     <div class="header">
-      <div class="text-wrapper">SANJAYL SERVER</div>
-      <div class="text-wrapper-2">Hello Guys!</div>
-      <div class="text-wrapper-3">Welcome To My Server 👋</div>
+      <div class="text-wrapper">SANJAY KUMAR SERVER</div>
+      <div class="text-wrapper-2">Hello San!!</div>
+      <div class="text-wrapper-3">Have a nice day buddy👋</div>
     </div>
 
     <div class="menu">
@@ -144,6 +144,8 @@
       <a href="ADLD LAB.pdf" download class="rectangle">📂 ADLD LAB</a>
       <a href="SQL .pdf" download class="rectangle">📂 SQL LAB</a>
       <a href="SAC LAB.docx" download class="rectangle">📂 SAC LAB</a>
+      <a href="SAC LAB.docx" download class="rectangle">📂 Resume sanjay</a>
+      <a href="SAC LAB.docx" download class="rectangle">📂 2301GEX05_ADLD QB</a>
     </div>
 
     <div class="footer">
@@ -153,4 +155,5 @@
 
 </body>
 </html>
+
 
