--- a/index.html
+++ b/index.html
@@ -1,159 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sanjay Server</title>
-
-  <!-- Google Font: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-
-    
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Sanjay Advanced Server</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+<style>
+  :root {
+    --primary-color: #2a9d8f;
+    --bg-color: #121212;
+    --card-bg: rgba(255 255 255 / 0.05);
+    --text-light: #eee;
+    --text-muted: #999;
+    --shadow: 0 8px 20px rgb(42 157 143 / 0.3);
+  }
+  body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    background: var(--bg-color);
+    color: var(--text-light);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+  }
+  .container {
+    background: var(--card-bg);
+    padding: 30px 25px;
+    border-radius: 30px;
+    max-width: 440px;
+    box-shadow: var(--shadow);
+    backdrop-filter: blur(8px);
+    display: flex;
+    flex-direction: column;
+  }
+  .header {
+    text-align: center;
+    margin-bottom: 25px;
+  }
+  .header h1 {
+    font-weight: 600;
+    font-size: 1.8rem;
+    margin: 0;
+    color: var(--primary-color);
+  }
+  .header p {
+    color: var(--text-muted);
+    margin: 6px 0 0;
+    font-weight: 400;
+  }
+  .links {
+    display: grid;
+    gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  }
+  .link-btn {
+    background: transparent;
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+    border-radius: 15px;
+    padding: 14px 20px;
+    font-weight: 600;
+    font-size: 1rem;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .link-btn:hover {
+    background: var(--primary-color);
+    color: #121212;
+    box-shadow: 0 6px 15px rgb(42 157 143 / 0.7);
+    transform: translateY(-4px) scale(1.05);
+  }
+  .icon {
+    margin-right: 8px;
+    font-size: 1.2rem;
+  }
+  @media (min-width: 768px) {
+    .container {
+      max-width: 600px;
     }
-
-    /* Server Section Box */
-    .iphone {
-      width: 100%;
-      max-width: 400px;
-      min-height: 500px;
-      background: rgba(255, 255, 255, 0.92);
-      border-radius: 25px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.25);
-      padding: 25px 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-      /* Only fade-in animation */
-      animation: fadeInUp 1s ease-out;
-    }
-
-    /* Fade-in from bottom */
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(40px) scale(0.95);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-      }
-    }
-
-    .header {
-      text-align: center;
-    }
-
-    .text-wrapper {
-      font-size: clamp(20px, 4vw, 26px);
-      font-weight: 700;
-      color: #111;
-    }
-
-    .text-wrapper-2 {
-      font-size: clamp(14px, 3vw, 16px);
-      color: #444;
-      margin-top: 6px;
-      font-weight: 500;
-    }
-
-    .text-wrapper-3 {
-      font-size: clamp(12px, 2.5vw, 14px);
-      color: #2a9d8f;
-      margin-top: 4px;
-      font-weight: 600;
-    }
-
-    .menu {
-      display: grid;
-      gap: 12px;
-    }
-
-    .rectangle {
-      padding: 14px;
-      border-radius: 12px;
-      background-color: #f9f9f9;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 500;
-      font-size: clamp(14px, 3vw, 16px);
-      color: #333;
-      text-decoration: none;
-      cursor: pointer;
-      transition: all 0.4s ease;
-      text-align: center;
-    }
-
-    .rectangle:hover {
-      background-color: #2a9d8f;
-      color: #fff;
-      transform: translateY(-3px) scale(1.05);
-      box-shadow: 0 6px 14px rgba(42,157,143,0.35);
-    }
-
-    .footer {
-      text-align: center;
-    }
-
-    .text-wrapper-6 {
-      font-size: clamp(12px, 2.5vw, 13px);
-      color: #555;
-      font-weight: 500;
-    }
-
-    /* Tablet - show 2 columns */
-    @media (min-width: 600px) {
-      .menu {
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-
-    /* Desktop - larger box */
-    @media (min-width: 1024px) {
-      .iphone {
-        max-width: 500px;
-        min-height: 600px;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <div class="iphone">
-    <div class="header">
-      <div class="text-wrapper">SANJAY KUMAR SERVER</div>
-      <div class="text-wrapper-2">Hello San!!</div>
-      <div class="text-wrapper-3">Have a nice day buddy👋</div>
-    </div>
-
-    <div class="menu">
-      <!-- Replace file paths with your real material -->
-      <a href="timetable.jpg" download class="rectangle">📘 Time Table</a>
-      <a href="DBMS 1.pdf" download class="rectangle">💾 DBMS</a>
-      <a href="" download class="rectangle">📟 ADLD</a>
-      <a href="AI.pdf" download class="rectangle">🤖 AI</a>
-      <a href="ADLD LAB.pdf" download class="rectangle">📂 ADLD LAB</a>
-      <a href="SQL .pdf" download class="rectangle">📂 SQL LAB</a>
-      <a href="SAC LAB.docx" download class="rectangle">📂 SAC LAB</a>
-      <a href="SAC LAB.docx" download class="rectangle">📂 Resume sanjay</a>
-      <a href="SAC LAB.docx" download class="rectangle">📂 2301GEX05_ADLD QB</a>
-    </div>
-
-    <div class="footer">
-      <div class="text-wrapper-6"></div>
-    </div>
+  <div class="container" role="main" aria-label="Sanjay Kumar Server Files">
+    <header class="header">
+      <h1>SANJAY KUMAR SERVER</h1>
+      <p>Hello San! Have a nice day buddy 👋</p>
+    </header>
+    <nav class="links" aria-label="Downloadable files">
+      <a href="timetable.jpg" download class="link-btn" role="button" tabindex="0"><span class="icon">📘</span>Time Table</a>
+      <a href="DBMS 1.pdf" download class="link-btn" role="button" tabindex="0"><span class="icon">💾</span>DBMS</a>
+      <a href="#" download class="link-btn" role="button" tabindex="0"><span class="icon">📟</span>ADLD</a>
+      <a href="AI.pdf" download class="link-btn" role="button" tabindex="0"><span class="icon">🤖</span>AI</a>
+      <a href="ADLD LAB.pdf" download class="link-btn" role="button" tabindex="0"><span class="icon">📂</span>ADLD LAB</a>
+      <a href="SQL .pdf" download class="link-btn" role="button" tabindex="0"><span class="icon">📂</span>SQL LAB</a>
+      <a href="SAC LAB.docx" download class="link-btn" role="button" tabindex="0"><span class="icon">📂</span>SAC LAB</a>
+      <a href="SAC LAB.docx" download class="link-btn" role="button" tabindex="0"><span class="icon">📂</span>Resume Sanjay</a>
+      <a href="SAC LAB.docx" download class="link-btn" role="button" tabindex="0"><span class="icon">📂</span>2301GEX05_ADLD QB</a>
+    </nav>
   </div>
-
 </body>
 </html>
-
-
